merge: coherence-json catch-all (main -> ce/main)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 119679]